<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_content_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:background="@color/dark" >

    <RelativeLayout
      android:id="@+id/surfaceView_Rl_MC"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_marginBottom="0dp">
      
        <dji.sdk.widget.DjiGLSurfaceView
          android:id="@+id/DjiSurfaceView_MC"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"/>

      </RelativeLayout>
      
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/black_overlay">
        
        <ImageButton
            android:id="@+id/ReturnBtnMC"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onReturn"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back_button" />

        <TextView
            android:id="@+id/ConnectStateMCTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text=""
            android:textSize="21sp" />

      </RelativeLayout>
      
      <Button
            android:id="@+id/MainControllerErrorButton"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:textColor="@android:color/white"
            android:text="@string/main_controller_error"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_button"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="250dp"
            android:textSize="14sp" />
 
        <ScrollView 
        android:id="@+id/MainControllerStateScrollView"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:scrollbars="vertical"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_button" > 
  
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" > 

                  <TextView
                    android:id="@+id/MainControllerStateTV"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/main_controller_state"
                    android:layout_centerInParent="true"
                    android:textSize="14sp" 
                    />   
        </RelativeLayout> 
        </ScrollView> 
 
       <ScrollView
          android:id="@+id/scrollViewBtn"
          android:layout_width="120dp"
          android:layout_height="110dp" 
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="200dp"
          android:scrollbars="vertical"
          >
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
                  
            <Button
            android:id="@+id/start_compass_calibration"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"  
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/start_compass_calibration" />
            
            <Button
            android:id="@+id/stop_compass_calibration"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"  
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/stop_compass_calibration" />
            
            <Button
            android:id="@+id/set_altitude_btn"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"   
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/set_altitude" />  

            <Button
            android:id="@+id/get_altitude_btn"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"   
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/get_altitude" /> 
 
            <Button
            android:id="@+id/get_aircraft_sn_btn"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"   
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/get_aircraft_sn" /> 
            
            <Button
            android:id="@+id/get_version_btn"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"  
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_button"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/get_version" />
            
            </LinearLayout>     
        </ScrollView> 

        <ScrollView 
        android:id="@+id/MCOnBoardRecvScrollView"    
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:scrollbars="vertical"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_button" > 
  
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" > 

                  <TextView
                    android:id="@+id/MCOnBoardRecv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/external_device_recv_data"
                    android:layout_centerInParent="true"
                    android:textSize="14sp" 
                    />   
        </RelativeLayout> 
        </ScrollView> 
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"> 
            <EditText 
                android:id="@+id/MCOnBoardSendEdit"
                android:layout_width="150dp"
                android:layout_height="35dp"/>
            <Button 
                android:id="@+id/MCOnBoardSendBtn"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/MCOnBoardSendEdit"
                android:text="@string/external_device_send_msg"
                android:textSize="14sp" />
        </RelativeLayout>
    

</RelativeLayout>
