<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_content_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/window_bg"
    android:keepScreenOn="true" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/black_overlay" >

        <ImageButton
            android:id="@+id/ReturnBtnRangeExtender"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onReturn"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back_button" />

        <TextView
            android:id="@+id/ConnectStateExtenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="21sp" />
        
       <TextView
            android:id="@+id/CurrentPowerLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text=""
            android:textSize="12sp" />
       
    </RelativeLayout>

    <TextView
        android:id="@+id/CurrentBindedTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/Current_Binded"
        android:textColor="@color/dark"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/CurrentBindedSsidTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CurrentBindedTipTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/SSID"
        android:textColor="@color/dark"
        android:textSize="18sp" />
 
    <TextView
        android:id="@+id/CurrentBindedSsidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/CurrentBindedSsidTipTextView"
        android:layout_toRightOf="@id/CurrentBindedSsidTipTextView"
        android:layout_marginLeft="5dp"
        android:text=""
        android:textColor="@color/dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/CurrentBindedMacTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CurrentBindedSsidTipTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/MAC"
        android:textColor="@color/dark"
        android:textSize="18sp" />
 
    <TextView
        android:id="@+id/CurrentBindedMacTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/CurrentBindedMacTipTextView"
        android:layout_toRightOf="@id/CurrentBindedMacTipTextView"
        android:layout_marginLeft="5dp"
        android:text=""
        android:textColor="@color/dark"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/NewBindedTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/CurrentBindedMacTipTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/New_Binded"
        android:textColor="@color/dark"
        android:textSize="18sp" />
        
    <TextView
        android:id="@+id/NewBindedTip2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NewBindedTipTextView"
        android:layout_alignLeft="@id/NewBindedTipTextView"
        android:layout_marginTop="5dp"
        android:text="@string/mac_instruction1"
        android:textColor="@color/black_overlay"
        android:textSize="12sp" />
            
    
    <EditText
            android:id="@+id/EditMacAddr4"
            android:focusable="true"  
            android:focusableInTouchMode="true"             
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/NewBindedTip2TextView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center|left"
            android:maxLength="2"
            android:scrollHorizontally="true"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:singleLine="true"
            android:imeOptions="actionNext" />
        


        <EditText
            android:id="@+id/EditMacAddr5"
            android:focusable="true"  
            android:focusableInTouchMode="true"             
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/EditMacAddr4"
            android:layout_alignTop="@id/EditMacAddr4"
            android:layout_marginLeft="5dp"
            android:gravity="center|left"
            android:maxLength="2"
            android:scrollHorizontally="true"
            android:textColor="@color/blue"
            android:textSize="16sp" 
            android:singleLine="true"
            android:imeOptions="actionNext"/>


        <EditText
            android:id="@+id/EditMacAddr6"
            android:focusable="true"  
            android:focusableInTouchMode="true"             
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/EditMacAddr5"
            android:layout_alignTop="@id/EditMacAddr4"
            android:layout_marginLeft="5dp"
            android:gravity="center|left"
            android:maxLength="2"
            android:scrollHorizontally="true"
            android:textColor="@color/blue"
            android:textSize="16sp" 
            android:singleLine="true"
            android:imeOptions="actionDone"/>
        
         <Button
          android:id="@+id/StartBindButton"
          android:layout_width="130dp"
          android:layout_height="35dp"
          android:paddingLeft="5dp"
          android:paddingRight="5dp"        
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_below="@id/EditMacAddr4"
          android:background="@drawable/selector_button"
          android:textSize="14sp"
          android:textColor="@color/white"
          android:text="@string/Bind" />   
          
       <TextView
        android:id="@+id/RenameTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginRight="150dp"
        android:layout_marginTop="3dp"
        android:text="@string/Rename_Ssid"
        android:textColor="@color/dark"
        android:textSize="18sp" /> 
        
       <TextView
        android:id="@+id/RenameTip2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RenameTipTextView"
        android:layout_alignLeft="@id/RenameTipTextView"
        android:layout_marginTop="0dp"
        android:text="@string/ssid_instruction1"
        android:textColor="@color/black_overlay"
        android:textSize="12sp" />

      <TextView
        android:id="@+id/NewSsidStartText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/RenameTip2TextView"
        android:layout_alignLeft="@id/RenameTip2TextView"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"                    
        android:text="Phantom_"
        android:textColor="@color/black_overlay"
        android:textSize="16sp"
        android:typeface="normal"
         />
    
       <EditText
          android:id="@+id/NewSsidEditText"
          android:layout_toRightOf="@id/NewSsidStartText"
          android:layout_alignTop="@id/NewSsidStartText"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:gravity="center|left"
          android:maxLength="24"
          android:textSize="16sp"
          android:singleLine="true"
          android:imeOptions="actionDone"
          />
       
       <Button
          android:id="@+id/StartRenameButton"
          android:layout_width="130dp"
          android:layout_height="35dp"
          android:paddingLeft="5dp"
          android:paddingRight="5dp"        
          android:layout_below="@id/NewSsidEditText"
          android:layout_alignLeft="@id/NewSsidStartText"
          android:background="@drawable/selector_button"
          android:textSize="14sp"
          android:textColor="@color/white"
          android:text="@string/Rename" />
       
       <TextView
          android:id="@+id/PasswordTipTextView"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_below="@id/StartRenameButton"
          android:layout_alignLeft="@id/StartRenameButton"
          android:layout_marginTop="3dp"
          android:gravity="center_vertical" 
          android:text="@string/Password"
          android:textColor="@color/dark"
          android:textSize="18sp" /> 
          
       <EditText
          android:id="@+id/NewPasswordEditText"
          android:layout_toRightOf="@id/PasswordTipTextView"
          android:layout_alignTop="@id/PasswordTipTextView"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:gravity="center|left"
          android:maxLength="16"
          android:textSize="16sp"
          android:singleLine="true"
          android:imeOptions="actionDone"
          />
       
       <TextView
        android:id="@+id/Password2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PasswordTipTextView"
        android:layout_alignLeft="@id/PasswordTipTextView"
        android:layout_marginTop="0dp"
        android:text="@string/password_instruction"
        android:textColor="@color/black_overlay"
        android:textSize="12sp" />
       
       <Button
          android:id="@+id/StartSetPasswordButton"
          android:layout_width="130dp"
          android:layout_height="35dp"
          android:paddingLeft="5dp"
          android:paddingRight="5dp"        
          android:layout_below="@id/Password2TextView"
          android:layout_alignLeft="@id/Password2TextView"
          android:background="@drawable/selector_button"
          android:textSize="14sp"
          android:textColor="@color/white"
          android:text="@string/Set_password" />
    
       
</RelativeLayout>